tests/snapshots/run_wpt_conformance__trtx_batchNormalization_options_axis_0___gelu.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization options.axis=0 + gelu",
    "trtx",
    "PASS",
)
